--- a/src/i18n/en-US.json
+++ b/src/i18n/en-US.json
@@ -2,7 +2,7 @@
   "auth": {
     "welcome": "Welcome back",
     "logout": "Logout",
-    "dontHaveAccount": "Don't have an account? ",
+    "dontHaveAccount": "Don't have an account? {0}",
     "registerHere": "Register here",
     "notFound": "Not Found",
     "gone": "It's gone"
