docs: adjust docs

--- a/docs/_overview.mdx
+++ b/docs/_overview.mdx
@@ -1,4 +1,10 @@
+import { Meta } from "@storybook/blocks";
+
+<Meta title="Docs/Application Overview" />
+
 # Application Overview
+
+## Tech Stack
 
 The application built with:
 
@@ -23,8 +29,8 @@ The application built with:
 
 Prerequisites:
 
-- Node 18+
-- PNPM 8.x+ (i'll keep updating it)
+- Node 20+
+- PNPM 9.x+
 
 To set up the app execute the following commands:
 
@@ -54,7 +60,7 @@ $ pnpm dev
 
 ## Testing
 
-We are using MSW v2 which utilize Node v18+. Make sure you install Node v18+, because it has a built-in fetch.
+We are using MSW v2 which utilize Node v18+, so make sure you install Node v18+, because it has a built-in fetch.
 
 ```bash
 # run test
@@ -76,9 +82,9 @@ $ pnpm build
 
 ## Maintaining
 
-- Update dependencies weekly using dependencies updater. I recommend using Vscode extensions: [Vscode Ecosystem](https://marketplace.visualstudio.com/items?itemName=rifandani.vscode-ecosystem) (also maintained by myself)
+- Update dependencies weekly using dependencies updater.<br /> I recommend using Vscode extensions: [Vscode Ecosystem](https://marketplace.visualstudio.com/items?itemName=rifandani.vscode-ecosystem) (also maintained by myself)
 
 ## Deployment
 
-For now only supports deployment to Vercel.
-Check out `vercel.json` file fo further details.
+For now only supports deployment to Vercel.<br />
+Check out `vercel.json` file for further details.
