chore: bump deps

--- a/docs/_overview.mdx
+++ b/docs/_overview.mdx
@@ -82,7 +82,8 @@ $ pnpm build
 
 ## Maintaining
 
-- Update dependencies weekly using dependencies updater.<br /> I recommend using Vscode extensions: [Vscode Ecosystem](https://marketplace.visualstudio.com/items?itemName=rifandani.vscode-ecosystem) (also maintained by myself)
+- When updating storybook, run `pnpm dlx storybook@latest upgrade`. Follow the migration suggestions. After that run `pnpm dlx storybook doctor` to make sure storybook setup works correctly. See more [on their docs](https://storybook.js.org/docs/configure/upgrading)
+- Update dependencies using dependencies updater.<br /> I recommend using Vscode extensions: [Vscode Ecosystem](https://marketplace.visualstudio.com/items?itemName=rifandani.vscode-ecosystem) (also maintained by myself)
 
 ## Deployment
 
